...
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_check_in"
            android:icon="@drawable/ic_check_in"
            android:title="@string/check_in" />

        <item
            android:id="@+id/nav_messaging"
            android:icon="@drawable/ic_message"
            android:title="Messages" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/nav_buddies"
            android:icon="@drawable/ic_buddies"
            android:title="@string/buddies" />

        <item
            android:id="@+id/nav_discounts"
            android:icon="@drawable/ic_discounts"
...
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"/>

            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_sign_out"
                android:title="@string/sign_out" />
        </menu>
    </item>


...
