<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="appdev.playover.Profile_Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:paddingTop="?attr/actionBarSize">

        <Button
            android:id="@+id/editBtn"
            android:layout_width="75dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/edit_profile"
            android:textColor="@color/offWhitePalette"
            android:visibility="invisible" />

        <Button
            android:id="@+id/ProfileMessageBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/profileInterest"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/send_message"
            android:textColor="@color/offWhitePalette"
            android:visibility="invisible" />

        <Button
            android:id="@+id/blockUserButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/ProfileMessageBtn"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/block_user"
            android:textColor="@color/offWhitePalette"
            android:visibility="invisible" />

        <Button
            android:id="@+id/reportMisuseButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/blockUserButton"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/report_misuse"
            android:textColor="@color/offWhitePalette"
            android:visibility="invisible" />

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/imageFrame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/tempImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:visibility="visible"
                tools:src="@drawable/profile_avatar_placeholder" />

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:tint="#00682626"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/dndImage"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:src="@drawable/do_not_disturb"
                android:visibility="invisible" />

        </FrameLayout>

        <ImageButton
            android:id="@+id/profileBuddyStar"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:backgroundTint="@color/fui_transparent"
            android:src="@drawable/ic_star_border_black_24dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/imageFrame"
            android:layout_toEndOf="@id/imageFrame"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:paddingBottom="20dp"
            android:textColor="@color/black"
            android:textSize="@dimen/name_text_dimens" />

        <TextView
            android:id="@+id/groupHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileName"
            android:paddingTop="15dp"
            android:text="@string/editGroup" />

        <TextView
            android:id="@+id/profileGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageFrame"
            android:paddingTop="30dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:textSize="@dimen/profile_text_dimens"
            android:visibility="visible" />

        <TextView
            android:id="@+id/positionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileGroup"
            android:text="@string/editPosition" />

        <TextView
            android:id="@+id/profilePosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileGroup"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:textSize="@dimen/profile_text_dimens"
            android:visibility="visible" />

        <TextView
            android:id="@+id/relationshipHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profilePosition"
            android:text="@string/relationship" />

        <TextView
            android:id="@+id/profileRelationshipText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profilePosition"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:textSize="@dimen/profile_text_dimens"
            android:visibility="visible" />

        <TextView
            android:id="@+id/interestsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileRelationshipText"
            android:text="@string/editInterests" />

        <TextView
            android:id="@+id/profileInterest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileRelationshipText"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:textSize="@dimen/profile_text_dimens"
            android:visibility="visible" />

    </RelativeLayout>

</ScrollView>